[metadata]
author = Eli Ribble
author_email = eliribble@google.com
description = A system for pushing OAuth credentials across systems
long_description = file: README.md
long_description_content_type = text/markdown
name = oauth-creds-tunnel
version = 0.1

[options]
install_requires =
	aiohttp[speedups]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
	oauth-creds-tunnel-entry = oauth_creds_tunnel:main
	oauth-creds-tunnel-exit = oauth_creds_tunnel:main
